# cosense-md

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: check.yml  publish.yml
crates/cosense-core/: Cargo.toml
crates/cosense-core/src/: ast.rs  inline.rs  lib.rs  parser.rs  render_markdown.rs
crates/cosense-core/tests/: conformance.rs  properties.rs
crates/cosense-wasm/: Cargo.toml
crates/cosense-wasm/src/: lib.rs
extension/: README.md  background.js  content-bridge.js  content-main.js  manifest.json  panel.html  panel.js
fixtures/: cosense_decision_table.json
markitdown-cosense/: Cargo.toml  README.md  pyproject.toml
markitdown-cosense/python/markitdown_cosense/: __init__.py  _core.pyi  _plugin.py
markitdown-cosense/src/: lib.rs
markitdown-cosense/tests/: test_cosense_notation.txt
markitdown-cosense/tests/integration/: test_markitdown_plugin.py
markitdown-cosense/tests/unit/: test_decision_table.py
web/: README.md  index.html  main.js
