[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "markitdown-cosense"
version = "0.3.0"
description = "A markitdown plugin for converting Cosense notation to Markdown"
readme = "README.md"
license = {text = "MIT"}
authors = [
    { name = "kazu728", email = "kazuki.matsuo.728@gmail.com" }
]
keywords = ["markitdown", "cosense", "markdown", "converter", "plugin"]
requires-python = ">=3.10"
dependencies = [
    "markitdown>=0.1.1",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=4.0.0",
    "ruff>=0.11.12",
    "pyright>=1.1.390",
    "maturin>=1.7,<2.0",
]

[project.urls]
Homepage = "https://github.com/kazu728/markitdown-cosense"
Repository = "https://github.com/kazu728/markitdown-cosense"
Issues = "https://github.com/kazu728/markitdown-cosense/issues"

[project.entry-points."markitdown.plugin"]
markitdown-cosense = "markitdown_cosense"

[tool.uv]
dev-dependencies = ["markitdown-cosense[dev]"]

[tool.pyright]
include = ["python"]
pythonVersion = "3.10"
pythonPlatform = "All"
typeCheckingMode = "basic"
reportUnusedClass = "warning"
reportUnusedFunction = "warning"


[tool.maturin]
# Mixed layout: the Python package (accepts/stream glue) lives in python/, and
# the compiled Rust core is placed at markitdown_cosense._core. All conversion
# logic is in the Rust core; the Python side is glue plus the compiled module.
# manifest-path defaults to the Cargo.toml beside this file (the cosense-py crate).
python-source = "python"
module-name = "markitdown_cosense._core"

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration"]

[tool.ruff]
# The Python package lives in python/ (Rust source occupies src/), so point ruff's
# first-party detection there — otherwise markitdown_cosense reads as third-party.
src = ["python"]

[tool.ruff.lint]
select = [
    "I",   # isort
    "F",   # pyflakes
    "UP",  # pyupgrade
]
