[package]
name = "cosense-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Cosense notation → Markdown conversion core"

[dependencies]
regex = "1"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
proptest = "1"
