[package]
name = "cosense-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "wasm-bindgen binding for cosense-core (browser live preview)"

[lib]
crate-type = ["cdylib"]

[dependencies]
cosense-core = { path = "../cosense-core" }
wasm-bindgen = "0.2"
